--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 
     <style>
         body {
-            background-color: #111827;
+            background-color: #040b19;
             color: #f3f4f6;
             overflow-x: hidden;
             scroll-behavior: smooth;
         }
         ::-webkit-scrollbar { width: 8px; }
-        ::-webkit-scrollbar-track { background: #111827; }
+        ::-webkit-scrollbar-track { background: #040b19; }
         ::-webkit-scrollbar-thumb { background: #4b5563; border-radius: 4px; }
         ::-webkit-scrollbar-thumb:hover { background: #6b7280; }
         .snap-container { scroll-snap-type: y mandatory; height: 100vh; overflow-y: scroll; }
@@ -64,7 +64,7 @@
         // --- Composants UI ---
 
         const Section = ({ children, className = "", id }) => (
-            <section id={id} className={`snap-section flex flex-col justify-center items-center px-4 py-16 md:px-12 relative overflow-hidden ${className}`}>
+            <section id={id} className={`snap-section bg-[#061128] flex flex-col justify-center items-center px-4 py-16 md:px-12 relative overflow-hidden ${className}`}>
                 {children}
             </section>
         );
@@ -223,7 +223,7 @@
         const Hero = () => (
             <Section id="hero" className="text-center relative">
                  <div className="absolute inset-0 bg-cover bg-center opacity-20" style={{ backgroundImage: "url('https://images.unsplash.com/photo-1451187580459-43490279c0fa?q=80&w=2072')" }}></div>
-                <div className="absolute inset-0 bg-gradient-to-b from-gray-900/80 to-gray-900"></div>
+                <div className="absolute inset-0 bg-gradient-to-b from-[#061128]/85 to-[#040b19]"></div>
                 <motion.div 
                     initial={{ opacity: 0, scale: 0.8 }}
                     animate={{ opacity: 1, scale: 1 }}
@@ -295,7 +295,7 @@
                             alt="Voiture futuriste" 
                             className="object-cover w-full h-full group-hover:scale-110 transition-transform duration-700"
                         />
-                        <div className="absolute inset-0 bg-gradient-to-t from-gray-900 via-transparent to-transparent opacity-80"></div>
+                        <div className="absolute inset-0 bg-gradient-to-t from-[#040b19] via-transparent to-transparent opacity-85"></div>
                         <div className="absolute bottom-4 left-4">
                             <div className="flex items-center gap-2 text-white font-bold">
                                 <Car className="text-pink-500" />
@@ -335,7 +335,7 @@
             ];
 
             return (
-                <Section id="foundations" className="bg-slate-950/70">
+                <Section id="foundations">
                     <div className="max-w-6xl w-full">
                         <h2 className="text-3xl md:text-5xl font-bold text-center text-white mb-4">
                             Les fondations de l'IA
@@ -597,7 +597,7 @@
         };
 
         const ChatGPTGarage = () => (
-            <Section className="bg-gray-900/70">
+            <Section>
                 <div className="max-w-6xl w-full">
                     <h2 className="text-3xl md:text-5xl font-bold text-center text-white mb-10">
                         Apprivoiser ChatGPT: votre garage numérique
@@ -643,7 +643,7 @@
         );
 
         const EcosystemVsPower = () => (
-            <Section className="bg-slate-950/70">
+            <Section>
                 <div className="max-w-6xl w-full">
                     <h2 className="text-3xl md:text-5xl font-bold text-center text-white mb-4">
                         Écosystème versus puissance brute
@@ -782,7 +782,7 @@
             }, []);
 
             return (
-                <Section className="bg-gray-900">
+                <Section>
                     <div className="max-w-6xl w-full">
                         <div className="flex flex-col items-center justify-center mb-12">
                             <div className="flex items-center gap-3 mb-2">
@@ -854,7 +854,7 @@
         };
 
         const Risks = () => (
-            <Section id="risks" className="bg-red-900/10">
+            <Section id="risks">
                 <div className="max-w-6xl w-full">
                     <h2 className="text-3xl md:text-5xl font-bold text-center text-white mb-4">
                         Les Illusions Dangereuses
@@ -1005,7 +1005,7 @@
         );
 
         const Prompting = () => (
-            <Section id="prompting" className="bg-gradient-to-br from-gray-900 via-indigo-900/20 to-gray-900">
+            <Section id="prompting">
                 <div className="max-w-6xl w-full">
                     <h2 className="text-3xl md:text-5xl font-bold text-center text-white mb-4">
                         L'art du "prompt" : bien communiquer avec l'IA
@@ -1159,7 +1159,7 @@
             ];
 
             return (
-                <Section className="bg-slate-950/70">
+                <Section>
                     <div className="max-w-6xl w-full">
                         <h2 className="text-3xl md:text-5xl font-bold text-center text-white mb-10">
                             Les 10 commandements du prompt
@@ -1324,7 +1324,7 @@
         };
 
         const BeatboxSection = () => (
-            <Section className="bg-gray-900/60">
+            <Section>
                 <div className="max-w-6xl w-full">
                     <h2 className="text-3xl md:text-5xl font-bold text-center text-white mb-4">
                         Ma Bohème: quand l'humain dépasse la machine
@@ -1386,7 +1386,7 @@
         );
 
         const RegulationBalance = () => (
-            <Section id="regulation" className="bg-black">
+            <Section id="regulation">
                 <div className="max-w-6xl w-full">
                     <div className="text-center max-w-5xl mx-auto mb-10">
                         <div className="inline-flex items-center gap-2 px-4 py-1 rounded-full bg-blue-500/10 border border-blue-500/30 text-blue-200 text-xs uppercase tracking-wider mb-4">
@@ -1535,7 +1535,7 @@
         );
 
         const EnvironmentBalance = () => (
-            <Section id="ai-environment" className="bg-slate-950/80">
+            <Section id="ai-environment">
                 <div className="max-w-6xl w-full">
                     <div className="text-center max-w-5xl mx-auto mb-10">
                         <div className="inline-flex items-center gap-2 px-4 py-1 rounded-full bg-emerald-500/10 border border-emerald-500/30 text-emerald-200 text-xs uppercase tracking-wider mb-4">
@@ -1637,7 +1637,7 @@
             ];
 
             return (
-                <Section id="next-steps" className="bg-gradient-to-br from-gray-900 via-blue-900/20 to-gray-900">
+                <Section id="next-steps">
                     <div className="max-w-6xl w-full space-y-10">
                         <h2 className="text-3xl md:text-5xl font-bold text-center text-white mb-4">
                             Votre nouvelle auto-école est ouverte !
@@ -1716,7 +1716,7 @@
         };
 
         const Consumption = () => (
-            <Section id="energy-geo" className="bg-black">
+            <Section id="energy-geo">
                 <div className="max-w-6xl w-full space-y-12">
                     <div className="space-y-6">
                         <div className="inline-flex items-center gap-2 px-4 py-1 rounded-full bg-yellow-500/10 border border-yellow-500/30 text-yellow-200 text-xs uppercase tracking-wider">
@@ -1848,7 +1848,7 @@
         );
 
         const Conclusion = () => (
-            <Section id="conclusion" className="relative bg-gradient-to-br from-gray-900 via-slate-900 to-gray-950">
+            <Section id="conclusion" className="relative">
                 <div className="max-w-6xl w-full relative z-10 space-y-8">
                     <div className="text-center">
                         <div className="w-24 h-24 bg-gradient-to-br from-blue-500 to-purple-600 rounded-full mx-auto mb-6 flex items-center justify-center shadow-lg">
